3er cambio color fondo

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     display: flex;
     padding: 10px;
     height: 50px;
-    background-color: #ff00c8;
+    background-color: #6200ff;
   }
    .navbar {
     display: flex;
