--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     display: flex;
     padding: 10px;
     height: 50px;
-    background-color: #6200ff;
+    background-color: #00ff22;
   }
    .navbar {
     display: flex;
