--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,11 @@
     display: flex;
     padding: 10px;
     height: 50px;
-    background-color: #00ff22;
+    background-color: #00ff37;
   }
    .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
   }
   .brand {
@@ -43,7 +43,7 @@
     }
     .button-menu-toggle {
       display: block;
-      background-color: white;
+      background-color: rgb(167, 9, 9);
       border:none;
       border-radius: 50px;
       padding: 0 24px;
